# SkillCertify

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: adapters.md  assertions.md  cheatsheet.md  concepts.md  examples.md  extending.md  install.md  logs.md  manual-prompt.md  quickstart.md  troubleshooting.md  tutorial.md
docs/commands/: bootstrap.md  check-skill.md  fix-skill.md  fix-testcase.md  generate-fixture.md  generate.md  iterate.md  new-skill.md  run.md
runner/: cli.py
runner/adapters/: __init__.py  base.py
runner/adapters/claude/: adapter.py
runner/adapters/codex/: __init__.py  appserver.py  common.py  exec.py  (+1 more)
runner/core/: architect.py  assertions.py  check_skill.py  cleanup.py  diagnose.py  fix_skill.py  fix_testcase.py  generate.py  init_project.py  iterate.py  judge.py  new_skill.py  report.py  runner.py  skill_loader.py  validate.py
skills/code-generator-test/: SKILL.md
skills/example-skill/: SKILL.md
skills/google-code-reviewer-test/: SKILL.md
testcases/: _TEMPLATE.yaml  claude-example.yaml  code-generator-codex.yaml  code-generator.yaml  codex-example.yaml  cub-code-review-generated.yaml  google-code-reviewer.yaml
tests/: conftest.py  test_architect_resolver.py  test_assertions.py  test_cleanup.py  test_cli_options.py  test_codex_tui.py  test_diagnose.py  test_fix_skill.py  test_fix_testcase.py  test_generate.py  test_init.py  test_iterate.py  test_judge.py  test_load_cases.py  test_report.py  test_runner.py  test_skill_loader.py  test_validate.py
tools/codex/: inspect_rollout.py  probe_appserver.py  tui_probe.py
(+5 files in other folders)
